# urbantrends-projects

./: README.md
modern-business-website/: index.html  jsconfig.json  package-lock.json  package.json
modern-business-website/src/: App.jsx  index.css
modern-business-website/src/components/: AuthModal.jsx  CustomForm.jsx  Header.jsx  HeroSection.jsx
modern-business-website/src/pages/: GettingStarted.jsx  Home.jsx
niche-marketplace/: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
niche-marketplace/.github/workflows/: ci.yml
niche-marketplace/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
niche-marketplace/backend/apps/accounts/: admin.py  (+2 more)
niche-marketplace/backend/config/: celery.py  urls.py
niche-marketplace/frontend/: .env.example  Dockerfile  next.config.ts  package-lock.json  package.json
niche-marketplace/frontend/app/: globals.css  layout.tsx  page.tsx
niche-marketplace/frontend/lib/: api.ts
onboarding-kit/: .gitignore  CLAUDE.md  PLAN.md  README.md
onboarding-kit/.github/workflows/: ci.yml
onboarding-kit/apps/agent/: .gitignore  README.md  pubspec.yaml
onboarding-kit/apps/office/: package-lock.json  package.json
onboarding-kit/backend/: .dockerignore  Cargo.toml  Dockerfile  README.md
onboarding-kit/backend/.sqlx/: query-0c8e3bb6c697760e026b231362de76d4b0aa6a5d828a05702746cf6d494daffc.json  query-15737a6f391df5f2b8360bbca856a56226e40ef3c76e25dc988dc6f3d0ae8faa.json  query-16ec70d907ea096523a636df92acc1e534f923aa396e95e0ac781e1440f21c61.json  query-1b1b00c50366a8df8c3b43cc844a919e854e9229cc42d1fba13aedbcca0c3a6a.json  query-273434a3fb3c6441f263b280ec735678e60122de7ca519906b873bc0f92c71f7.json  query-29cc756e39c181205d7273ec79facd1260f3ed84308a4b768ff299034d4e8984.json  query-2ab7ebfbffbb878e65b4948859c918fdcf2d82863fdfb603ef414a2db3e9e8d0.json  query-2d28664bc027e42cb4e49c2a47adecaeb0b21997edb6a4bf7e8ef61bc6d562ee.json  query-300d70341e5f7355054c9b6c86d5c58ce9675c7b6ce1ee473826c391b80c6149.json  query-320c7d97bd56fa3b3f849917e73f3b5a959a107d243bbad47b24590f7aacc30a.json  query-3769cd5eb51c826086699fd825f9b49044c68e72f5d616afd437e10c34621dbf.json  query-389a62fd8fdda930e06063e874eb29e670292b5f2d7f74ba49c83782ca41ca7d.json  query-3904c83e4b44228c2e6258b102cebbce223cc4a3ee75e9ca0a73074588a6344b.json  query-3ed53ba42a9f7a2959f7eb17dfc5fbcdf123610c305d915a369f5ca2e9df1e3e.json  query-461658acbe4e5e900030962bf8a78bde46309488f3e5c8531e7c5ca85d282cc2.json  query-48be70a1406d5ba003d270abbe95edf793974c5dc11d1e49a587dd579d43449e.json  query-496f900a6eb38e0c95e6118f033c716ee7a1808170e149851fbb40d2deec5bb8.json  query-4c70c09a3543b67d31e94310159d21446dc61f0e6f9c6cf96197677b648b253e.json  query-516b12f5f3fe5a6e8e5a27ac7fad51f195ba3f42b0133534b93d19d329cf7139.json  query-536f7c58e1e0e12220b91cd43b6f137a86d16f20eb937e850892aa59f4ccfba2.json  query-55c786a7e0fc2e46b89c19662f0699178504c64265d858191622d65803d60659.json  query-5a853ce54f7d42af18ab829132aba737d070b72bcc9f07fd36f2c97cb2660783.json  query-5ca1b39d83189e442a947a9873f60478259017f50fcfdbfbb38449869218a80f.json  query-63497e88172533e375280b8080f56e20b38986c1f69974ad66a1b2a3b474a0c6.json  query-65c02f0c1de1702e5b1e497f7b7c6aa788c3e4b3ec7ce63ad50c4be7407ebddf.json  query-683c19716d3d5e91255ca0115d7024c4a1c4decd2e1e5ee7d7a2cc5a14786e2d.json  query-68e17906acc665b85582d2d4af6e275f16075b39fbe0894e6bb43c831c256ced.json  query-6b08ca348b69e36ddf7e21022ef4d5de9d336f0ba908955f5fc4ee8db0515443.json  query-6efaa6571ccce31e178baa281aab15f7a01ef0a6f966c2c52b2b15d4d1cd4b99.json  query-70e894c7d2b218de984b2c45e6151d36dcaaa33f9f6fd79cdf3b727fa341ef9c.json  query-75c71bec3d6a543b5c83be0f4a39e707dca2a142a97a85d977a6a52b97aeb429.json  query-78fdfef0761d259aae89e50ee439adb8ce59dd9351579a25911a1a6da8211ca9.json  query-7b0d00fae807200f2ad80e0133a4225dfd84282d0047e540b4c2b6cd01f40a7c.json  query-81bc5c7ddc41cdc96cb17586e39e332b9e194b7a6fa03ac42502a47e21f1d32c.json  query-85597399ae6a1267759630b35efd89aba7928f618f905dbc7b9cbe45952d0a07.json  query-878f1be8f4dc36c0b361f63f12e8aaa878ee1d33f8a9884d9c6dd85c8c21e500.json  query-8ad9692c4aa90742a645d1fa2080bf0edbcdfb1d6f5acddfe3470b59fb1de8ce.json  query-8c31d18db34516f2dbc358eea2e8e7b5ca29ee797879439e56d647793c5c8bfe.json  query-9638755c780fe39d4e16a4a84ebcea0f1eb88889aa30e00315a0880318ebf85e.json  query-9dab2f27ceb224b0762b505976a69bdfdb95820e58dd8fd48762df67e62f4650.json  (+28 more)
onboarding-kit/backend/crates/api/: Cargo.toml
onboarding-kit/backend/crates/api/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  openapi.rs  otp_store.rs  state.rs  telemetry.rs
onboarding-kit/backend/crates/api/src/routes/: admin.rs  applications.rs  auth.rs  clients.rs  consent.rs  documents.rs  dto.rs  exports.rs  guard.rs  health.rs  mod.rs  otp.rs  reports.rs  review.rs  session.rs
onboarding-kit/backend/crates/api/tests/: admin.rs  applications.rs  auth.rs  rate_limit.rs
onboarding-kit/backend/crates/core/: Cargo.toml
onboarding-kit/backend/crates/core/src/: jobs.rs  lib.rs  state_machine.rs
onboarding-kit/backend/crates/db/: Cargo.toml
onboarding-kit/backend/crates/db/src/: applications.rs  branches.rs  clients.rs  documents.rs  events.rs  export_digests.rs  exports.rs  jobs.rs  lib.rs  models.rs  otp.rs  products.rs  refresh_tokens.rs  reports.rs  tenants.rs  users.rs
onboarding-kit/backend/crates/integrations/: Cargo.toml
onboarding-kit/backend/crates/integrations/src/: doc_assist.rs  email.rs  image_ops.rs  lib.rs  mime.rs  otp.rs  password.rs  phone.rs  sms.rs  storage.rs  token.rs
onboarding-kit/backend/crates/jobs/: Cargo.toml
onboarding-kit/backend/crates/jobs/src/: lib.rs  main.rs
onboarding-kit/backend/migrations/: 0001_core_identity.sql  0002_onboarding.sql  0003_otp_jobs.sql  0004_products.sql  0005_export_digests.sql  0006_job_provider.sql
onboarding-kit/docs/demo/: landing-section.md  pilot-proposal.md  walkthrough-script.md
onboarding-kit/ops/: .env.example  Caddyfile  DEPLOY.md  backup.sh  docker-compose.prod.yml  docker-compose.yml
onboarding-kit/ops/public/: .gitignore  index.html
(+56 files in other folders)
