[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/db",
    "crates/integrations",
    "crates/jobs",
    "crates/api",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
# Internal crates
onboardkit-core = { path = "crates/core" }
onboardkit-db = { path = "crates/db" }
onboardkit-integrations = { path = "crates/integrations" }
onboardkit-jobs = { path = "crates/jobs" }

# Async runtime + web
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "net"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "2"
anyhow = "1"

# Auth
jsonwebtoken = "9"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Common
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
