[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/db",
    "crates/integrations",
    "crates/jobs",
    "crates/api",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
# Internal crates
onboardkit-core = { path = "crates/core" }
onboardkit-db = { path = "crates/db" }
onboardkit-integrations = { path = "crates/integrations" }
onboardkit-jobs = { path = "crates/jobs" }

# Async runtime + web
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "net"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tower_governor = "0.7"

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "2"
anyhow = "1"

# Auth / crypto
jsonwebtoken = "9"
argon2 = "0.5"
sha2 = "0.10"
subtle = "2"
getrandom = "0.3"
hex = "0.4"

# OTP / phone
phonenumber = "0.3"
async-trait = "0.1"

# Object storage (S3 / MinIO) — §11
aws-config = { version = "1", default-features = false, features = ["rustls"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rustls"] }
aws-credential-types = "1"
aws-smithy-async = { version = "1", features = ["rt-tokio"] }

# Outbound HTTP (Resend email, SMS providers) — §9
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Image processing (process_image job) — §10
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
infer = "0.16"
# base64: encode KYC images for the Anthropic vision block (doc_assist, opt-in).
base64 = "0.22"
# OpenAPI spec generation (§7) — served at /api/v1/openapi.json for client gen.
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Common
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
dotenvy = "0.15"

# Exports (§7) — CSV + Excel
csv = "1"
rust_xlsxwriter = "0.90"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
