[package]
name = "onboardkit-core"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

# core depends on nothing internal. NEVER add axum or sqlx here (CLAUDE.md §2, §3).

[dependencies]
serde.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
