[package]
name = "onboardkit-integrations"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

# integrations -> core only (CLAUDE.md §2).

[dependencies]
onboardkit-core.workspace = true
thiserror.workspace = true
tracing.workspace = true

async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
subtle.workspace = true
argon2.workspace = true
getrandom.workspace = true
hex.workspace = true
phonenumber.workspace = true

# Storage, email, image (§9, §10, §11)
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-credential-types.workspace = true
aws-smithy-async.workspace = true
reqwest.workspace = true
image.workspace = true
infer.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
